--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 </div>
             </div>
             <div class="card box2" style="border-radius: 22px;">
-                <img src="images/cardBoxImage3.jpeg" class="card-img-top" alt="...">
+                <img src="images/cardBoxImage3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title" style="text-align: center; font-size: 23px;">Mid Night party?</i></h5>
+                  <h5 class="card-title" style="text-align: center; font-size: 23px;">Bringing Joy of Food</i></h5>
                 </div>
             </div>
         </div>          
@@ -118,9 +118,13 @@
 
 <footer>
   
+  <br><br>
+
   <div class="footercenter col">
-    <h3>© 2021 Switto Inc.</h3> 
+    <h3>© 2021 Switto Inc. All rights reserved.</h3> 
   </div>
+
+  <br>
 
   <div class="row">
     <div class="footerleft col">
@@ -205,4 +209,7 @@
         </ul>
     </div>
   </div>
+  
+  <br><br>
+
 </footer>
