--- a/index.html
+++ b/index.html
@@ -8,31 +8,79 @@
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <!-- custom css file link  -->
-    <link rel="stylesheet" href="indexcss.css">
+
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- ends -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="indexcss.css">
 
 </head>
 <body>
     
 <!-- header section starts  -->
 
+<!--
 <header>
 
-    <a href="index.html" class="logo" style="text-decoration: none;"><i class="fas fa-utensils"></i>Switto</a>
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
     <nav class="navbar1">
-        <a href="#home"><i class="fas fa-home"><b class="headertext"> Home</b></i></a>
-        <a href="login.html"><i class="fas fa-sign-in-alt"><b class="headertext"> Login</b></i></a>
-        <a href="register.html"><i class="fas fa-pizza-slice"><b class="headertext"> Order</b></i></a>
-        <a href="#app"><i class="fab fa-google-play"><b class="headertext"> Get The App</b></i></a>
+        <a href="#home"></i></a>
+        <a href="login.html"></a>
+        <a href="register.html"></a>
+        <a href="#app"></a>
     </nav>
 
 </header>
+-->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top bg-gradient bg-opacity-20" style="min-height: 100px;">
+  <div class="container-fluid container">
+    <a href="index.html" class="logo navbar-brand" style="text-decoration: none;font-size: x-large;  color: #ff3838;">
+      <i class="fas fa-utensils"><b class="headertext"> Switto</b></i>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">
+            <i class="fas fa-home headericons"><b class="headertext"> Home</b></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-pizza-slice headericons"><b class="headertext"> Order</b></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fab fa-google-play headericons"><b class="headertext"> Get The App</b></i>
+          </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fas fa-sign-in-alt headericons"><b class="headertext"> Login</b></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="fa fa-user-plus headericons" aria-hidden="true"><b class="headertext"> Register</b></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
 <!-- header section ends -->
 
@@ -76,7 +124,7 @@
       <div class="row">
         <div class="col">
           <div class="app">
-            <img src="images/appUI.png" style="width: 60%;">
+            <img src="images/appUI.png" style="width: 80%;">
           </div>
         </div>
         <div class="col">
