--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </header>
 -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top bg-gradient bg-opacity-20" style="min-height: 100px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top bg-gradient" style="min-height: 100px;">
   <div class="container-fluid container">
     <a href="index.html" class="logo navbar-brand" style="text-decoration: none;font-size: x-large;  color: #ff3838;">
       <i class="fas fa-utensils"><b class="headertext"> Switto</b></i>
@@ -165,97 +165,99 @@
 
 
 <footer>
+
+  <br><br>
+
+  <div class="container">
+    <div class="row">
+      <div class="footerleft col">
+        <ul>
+          <li>
+            <h3>
+              <a href="#help">
+                Help and support
+              </a>
+            </h3>
+          </li>
+          <li>
+            <h3>
+              <a href="#terms">
+                Terms & conditions
+              </a>
+            </h3>
+          </li>
+          <li>
+            <h3>
+              <a href="#app">
+                Get the app
+              </a>
+            </h3>
+          </li>
+          <li>
+            <h3>
+              <a href="#map">
+                Site Map
+              </a>
+            </h3>
+          </li>
+          <li>
+            <h3>
+              <a href="#affiliate">
+                Affilate
+              </a>
+            </h3>
+          </li>
+        </ul>
+      </div>
   
+      <div class="footor col">
+          <ul class="footerright">
+            <li>
+              <h3>
+                <a href="#business">
+                  Business
+                </a>
+              </h3>
+            </li>
+            <li>
+              <h3>
+                <a href="#careers">
+                  Careers
+                </a>
+              </h3>
+            </li>
+            <li>
+              <h3>
+                <a href="#blogs">
+                  Blogs
+                </a>
+              </h3>
+            </li>
+            <li>
+              <h3>
+                <a href="#aboutus">
+                  About us
+                </a>
+              </h3>
+            </li>
+            <li>
+              <a href="#language">
+                <select name="down" id="drop" class="drop">
+                  <option value="english">English</option>
+                  <option value="tamil">Tamil</option>  
+                  <option value="hindi">Hindi</option>
+                </select>
+              </a>
+            </li>
+          </ul>
+      </div>
+    </div>
+  </div>
+
   <br><br>
 
   <div class="footercenter col">
     <h3>© 2021 Switto Inc. All rights reserved.</h3> 
-  </div>
-
-  <br>
-
-  <div class="row">
-    <div class="footerleft col">
-      <ul>
-        <li>
-          <h3>
-            <a href="#help">
-              Help and support
-            </a>
-          </h3>
-        </li>
-        <li>
-          <h3>
-            <a href="#terms">
-              Terms & conditions
-            </a>
-          </h3>
-        </li>
-        <li>
-          <h3>
-            <a href="#app">
-              Get the app
-            </a>
-          </h3>
-        </li>
-        <li>
-          <h3>
-            <a href="#map">
-              Site Map
-            </a>
-          </h3>
-        </li>
-        <li>
-          <h3>
-            <a href="#affiliate">
-              Affilate
-            </a>
-          </h3>
-        </li>
-      </ul>
-    </div>
-
-    <div class="footor col">
-        <ul class="footerright">
-          <li>
-            <h3>
-              <a href="#business">
-                Business
-              </a>
-            </h3>
-          </li>
-          <li>
-            <h3>
-              <a href="#careers">
-                Careers
-              </a>
-            </h3>
-          </li>
-          <li>
-            <h3>
-              <a href="#blogs">
-                Blogs
-              </a>
-            </h3>
-          </li>
-          <li>
-            <h3>
-              <a href="#aboutus">
-                About us
-              </a>
-            </h3>
-          </li>
-          <li>
-            <a href="#language">
-              <select name="down" id="drop" class="drop">
-                <option value="english">English</option>
-                <option value="tamil">Tamil</option>  
-                <option value="hindi">Hindi</option>
-              </select>
-            </a>
-          </li>
-        </ul>
-    </div>
   </div>
   
   <br><br>
