--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Switto</title>
+    <title>Home | Switto</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -67,12 +67,8 @@
       </ul>
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fas fa-sign-in-alt headericons"><b class="headertext"> Login</b></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="login.html">
+            <i class="fas fa-sign-in-alt headericons"><b class="headertext"> Login</b></i><b class="headertext headericons"> / </b>
             <i class="fa fa-user-plus headericons" aria-hidden="true"><b class="headertext"> Register</b></i>
           </a>
         </li>
