dynamic listing using react

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar1">
         <a href="#home"><i class="fas fa-home"><b class="headertext"> Home</b></i></a>
         <a href="login.html"><i class="fas fa-sign-in-alt"><b class="headertext"> Login</b></i></a>
-        <a href="register.html"><i class="fas fa-pizza-slice"><b class="headertext"> Order</b></i></a>
+        <a href="./reactui/public/index.html"><i class="fas fa-pizza-slice"><b class="headertext">Order Food</b></i></a>
         <a href="#app"><i class="fab fa-google-play"><b class="headertext"> Get The App</b></i></a>
     </nav>
 
@@ -112,6 +112,9 @@
     
 
 <!--Footer starts here-->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  <script src="./reactui/src/index.js" crossorigin></script>
 
 </section>
 
@@ -208,6 +211,7 @@
           </li>
         </ul>
     </div>
+
   </div>
   
   <br><br>
