--- a/index.html
+++ b/index.html
@@ -147,7 +147,31 @@
       </div>
     </div>
     
-
+    <div class="s" style="width: 100%;">
+      <hr style="border: double;">
+    </div>
+    <br>
+    <br>
+    
+    <div class="email-box" style="margin: 0 auto;">
+      <div class="email__form__container" style="text-align: center;">
+        <h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+          Queries? Contact us through Email! 
+        </h1>
+        <br>
+        <div class="form__container">
+          <input type="email" class="email__input" placeholder=" " style="width:49%;border: 2px solid #ffb7bb;height:30px;"/>
+          <br>
+          <label class="email__label" style="font-size: large;">Email Address</label> 
+        </div>
+        <br>
+        <button class="etn">
+          <i class="fas fa-key"><span class="headertext"> Send Mail</span></i>
+        </button> 
+      </div>
+    <br>
+    <br>    
+    </div>
 
 
     <div class="s" style="width: 100%;">
