--- a/login.html
+++ b/login.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login / Register | Switto</title>
+    <title>Login / Sign Up | Switto</title>
+    
+    <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- ends -->
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="indexcss.css">
     <link rel="stylesheet" href="logincss.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/brands.min.css">
+
 </head>
 <body>
-    <!--Navbar Starts-->
+
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top bg-gradient" style="min-height: 100px;">
     <div class="container-fluid container">
       <a href="index.html" class="logo navbar-brand" style="text-decoration: none;font-size: x-large;  color: #ff3838;">
@@ -21,7 +34,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link" aria-current="page" href="index.html">
               <i class="fas fa-home headericons"><b class="headertext"> Home</b></i>
             </a>
           </li>
@@ -38,7 +51,7 @@
         </ul>
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="login.html">
+            <a class="nav-link active" href="#">
               <i class="fas fa-sign-in-alt headericons"><b class="headertext"> Login</b></i><b class="headertext headericons"> / </b>
               <i class="fa fa-user-plus headericons" aria-hidden="true"><b class="headertext"> Register</b></i>
             </a>
@@ -47,62 +60,50 @@
       </div>
     </div>
   </nav>
-<!--Navbar Ends-->  
-    <div class="loginregister">
-        <div class="container" id="container">
-            <div class="form-container sign-up-container">
-                <form action="#">
-                    <h1>Create Account</h1>
-                    <div class="social-container">
-                        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                    <input type="text" placeholder="Name" />
-                    <input type="email" placeholder="Email" />
-                    <input type="password" placeholder="Password" />
-                    <input type="number" placeholder="Phone Number" />
-                    <input type="text" placeholder="Address Line 1"/>
-                    <input type="text" placeholder="Address Line 2"/>
-                    <button>Sign Up</button>
-                </form>
-            </div>
-            <div class="form-container sign-in-container">
-                <form action="#">
-                    <h1>Log in :)</h1>
-                    <div class="social-container">
-                        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                    <span>or use your account</span>
-                    <input type="email" placeholder="Email" />
-                    <input type="password" placeholder="Password" />
-                    <a href="#">Forgot your password?</a>
-                    <button>Sign In</button>
-                </form>
-            </div>
-            <div class="overlay-container">
-                <div class="overlay">
-                    <div class="overlay-panel overlay-left">
-                        <h1>Welcome Back!</h1>
-                        <p>To keep connected with us please login with your personal info</p>
-                        <button class="ghost" id="signIn">Sign In</button>
-                    </div>
-                    <div class="overlay-panel overlay-right">
-                        <h1>Hello, Friend!</h1>
-                        <p>Enter your personal details and start journey with us</p>
-                        <button class="ghost" id="signUp">Sign Up</button>
-                    </div>
-                </div>
-            </div>
+  
+    <section>
+      <div class="containers content">
+        <div class="user signinBx ">
+          <div class="imgBx"><img src="images/signInPic.jpg" alt="" /></div>
+          <div class="formBx">
+            <form action="" onsubmit="return false;">
+              <h2>Sign In</h2>
+              <input type="text" name="" placeholder="Username" />
+              <input type="password" name="" placeholder="Password" />
+              <input type="submit" name="" value="Login" />
+              <p class="signup">
+                Don't have an account ?
+                <a href="#" onclick="toggleForm();">Sign Up.</a>
+              </p>
+            </form>
+          </div>
         </div>
-        
-        <footer>
-          <p>© Copywirght 2021 Switto-Inc</p>
-        </footer>
-        <script src="loginjs.js"></script>
-    </div>
+        <div class="user signupBx">
+          <div class="formBx">
+            <form action="" onsubmit="return false;">
+              <h2>Create an account</h2>
+              <input type="text" name="" placeholder="Name" />
+              <input type="email" name="" placeholder="Email Address" />
+              <input type="password" name="" placeholder="Password" />
+              <input type="text" name="" placeholder="Address Line 1" />
+              <input type="text" name="" placeholder="Address Line 2" />
+              <input type="text" name="" placeholder="City" />
+              <input type="text" name="" placeholder="State" />
+              <input type="text" name="" placeholder="Country" />
+              <input type="number" name="" placeholder="Pincode" />
 
-</body>
+              <input type="submit" name="" value="Sign Up" />
+              <p class="signup">
+                Already have an account ?
+                <a href="#" onclick="toggleForm();">Sign in.</a>
+              </p>
+              <br><br>
+            </form>
+          </div>
+          <div class="imgBx"><img src="images/signUpPic.jpg" alt="" /></div>
+        </div>
+      </div>
+    </section>
+  <script src="loginjs.js"></script>
+  </body>
 </html>
